# Chess

./: CMakeLists.txt
doc/html/: _field_8h_source.html  _game_manager_8h_source.html  _simple_button_8h_source.html  class_figure.html  class_game_manager.html  class_simple_button.html  classcolor__rect__changer.html  files.html  functions.html  functions_vars.html  hierarchy.html  menudata.js
doc/html/search/: all_3.js  all_4.js  all_7.js  all_9.js  classes_3.js  functions_0.js  functions_1.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
doc/latex/: _field_8h_source.tex  _game_manager_8h_source.tex  _simple_button_8h_source.tex  annotated.tex  class_figure.tex  class_game_manager.eps  class_game_manager.tex  class_simple_button.eps  class_simple_button.tex  classcolor__rect__changer.eps  classcolor__rect__changer.tex  color__rect__changer_8h_source.tex  figure_8h_source.tex  files.tex  hierarchy.tex  refman.tex  resources_8h_source.tex  struct_field.eps  struct_field.tex
html/: annotated.html  class_figure-members.html  class_game_manager-members.html  class_simple_button-members.html  classcolor__rect__changer-members.html  classes.html  color__rect__changer_8h_source.html  figure_8h_source.html  functions_func.html  resources_8h_source.html  struct_field-members.html  struct_field.html
html/search/: all_0.js  all_2.js  all_8.js  classes_0.js  classes_1.js  functions_2.js  functions_3.js  functions_6.js
project/: CMakeLists.txt
project/src/: CenteredText.h  Field.cpp  Field.h  GameManager.cpp  GameManager.h  Main.cpp  SimpleButton.h  color_rect_changer.h  figure.cpp  figure.h  main.cpp  resources.h
